<resources>
    <string name="app_name">DIY News</string>
    <string name="action_settings">Share video</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
    <string name="question_1">When?</string>
    <string name="tip_1">10:45, 10.06.2016</string>
    <string name="question_2">Where?</string>
    <string name="tip_2">Location ...</string>
    <string name="question_3">Who participates? What happened?</string>
    <string name="tip_3">Event ...</string>
    <string name="question_4">Why?</string>
    <string name="tip_4">Cause ...</string>
    <string name="question_5">Witness statement or person involved</string>
    <string name="tip_5">Additional information</string>
    <string name="question_6">Significant details</string>
    <string name="tip_6">Significant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generated">Video generated with success</string>

    <string name="facebook_app_id">1081344738613033</string>
    <string name="register">Register Video</string>
    <string name="from_library">From Library</string>
    <string name="create_video">Create Video</string>
    <string name="answer_text">Answer Questions</string>
    <string name="create">Create News</string>
    <string name="share_text">Share</string>
    <string name="save_text">Save</string>
    <string name="exit_text">Exit</string>
    <string name="share_header_text">Share News</string>
    <string name="must_not_empty">Must be not empty</string>

    <string name="cancel">Cancel</string>
    <string name="check_upload">I agree with uploading video on DIY_News channel on youtube</string>
    <string name="not_enough_length">The video length should be more than 15 seconds</string>

    <!--Tutorial texts -->
    <string name="tutorial_1">RECORD</string>
    <string name="tutorial_2">ANSWER QUESTIONS</string>
    <string name="tutorial_3">EDIT</string>
    <string name="tutorial_4">SHARE</string>
    <string name="choose_font">Choose font</string>
    <string name="choose_color">Choose color</string>
    <string name="buy_message_1">You can get full access</string>
    <string name="buy_message_2">to editing only by</string>
    <string name="buy_message_3"> <b> 5.99$</b></string>
    <string name="buy_text">Buy</string>
    <string name="success_buy">Thank you for buying. Now you have access for customized colors and fonts for text</string>

</resources>
