<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded">

    <ImageView
        android:id="@+id/close_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@drawable/ic_close"
        android:background="?attr/actionBarItemBackground" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_star" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:text="@string/buy_message_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/buy_message_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/buy_message_3" />

    <Button
        android:id="@+id/buy_btn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_oval"
        android:padding="6dp"
        android:text="@string/buy_text"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="@color/black_gray"
        android:gravity="center"
        android:textSize="18sp" />

</LinearLayout>