<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


    <LinearLayout
        android:id="@+id/tooltip_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Răspunde la Intrebări"
            android:textColor="@color/black_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_big"
        android:visibility="visible">

        <include
            layout="@layout/view_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question_1"
            android:textColor="@color/black_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_oval"
            android:weightSum="10">

            <EditText
                android:id="@+id/editText"
                android:hint="@string/tip_1"
                style="@style/edit_questions" />


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="5dp"
                android:src="@drawable/crop" />

        </LinearLayout>

        <include
            layout="@layout/view_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_questions"
            android:text="@string/question_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_oval"
            android:weightSum="10">

            <EditText
                android:id="@+id/editText2"
                android:hint="@string/tip_2"
                style="@style/edit_questions" />


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="5dp"
                android:src="@drawable/crop" />

        </LinearLayout>

        <include
            layout="@layout/view_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_questions"
            android:text="@string/question_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_oval"
            android:weightSum="10">

            <EditText
                android:id="@+id/editText3"
                android:hint="@string/tip_3"
                style="@style/edit_questions" />


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="5dp"
                android:src="@drawable/crop" />

        </LinearLayout>

        <include
            layout="@layout/view_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_questions"
            android:text="@string/question_4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_oval"
            android:weightSum="10">

            <EditText
                android:id="@+id/editText4"
                android:hint="@string/tip_4"
                style="@style/edit_questions" />


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="5dp"
                android:src="@drawable/crop" />

        </LinearLayout>

        <include
            layout="@layout/view_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textView5"
            style="@style/text_questions"
            android:text="@string/question_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_oval"
            android:weightSum="10">

            <EditText
                android:id="@+id/editText5"
                android:hint="@string/tip_5"
                style="@style/edit_questions" />


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="5dp"
                android:src="@drawable/crop" />

        </LinearLayout>

        <include
            layout="@layout/view_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textView6"
            style="@style/text_questions"
            android:text="@string/question_6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_oval"
            android:weightSum="10">

            <EditText
                android:id="@+id/editText6"
                android:hint="@string/tip_6"
                style="@style/edit_questions" />


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="5dp"
                android:src="@drawable/crop" />

        </LinearLayout>

        <include
            layout="@layout/view_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_oval"
            android:text="Creaza Video"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
