<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <video.paxra.com.videoconverter.views.VideoFullScreenLayoutView
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/tooltip_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBlack"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/text_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_big"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tip_1"
                android:inputType="textMultiLine"
                android:text="10.06.2016"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tip_2"
                android:inputType="textMultiLine"
                android:text="Chisinau"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tip_3"
                android:inputType="textMultiLine"
                android:maxLength="90"
                android:text="Hackatonul e in continuu"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tip_4"
                android:inputType="textMultiLine"
                android:maxLength="90"
                android:text="Acus va fi prezentarea"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tip_5"
                android:inputType="textMultiLine"
                android:maxLength="90"
                android:text="Nimic"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tip_6"
                android:inputType="textMultiLine"
                android:maxLength="90"
                android:text="Achtung!!!!!!!!"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn_generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/sa_green"
                android:text="Genereaza Video"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progress_option"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="20dp"
        android:visibility="gone">

        <com.leo.simplearcloader.SimpleArcLoader
            android:id="@+id/loader"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:visibility="visible"
            app:arc_margin="3dp"
            app:arc_speed="medium"
            app:arc_style="simple_arc"></com.leo.simplearcloader.SimpleArcLoader>

        <TextView
            android:id="@+id/loader_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/loader"
            android:paddingLeft="10dp"
            android:text="Loading..."
            android:textColor="@color/black_gray" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/final_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_gray" />

        <Button
            android:id="@+id/share_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp"
            android:text="SHARE" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_gray" />

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp"
            android:text="EDIT VIDEO" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_gray" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp"
            android:text="EXIT" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_gray" />
    </LinearLayout>
</LinearLayout>
