<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            layout="@layout/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/black" />

            <video.paxra.com.videoconverter.views.FontTextViewRegular
                android:id="@+id/text_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_big"
                android:text="Aici este textul vostru"
                android:textColor="@color/yellow"
                android:layout_marginBottom="16dp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_font"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/spinner_font_border"
            android:orientation="horizontal"
            android:padding="8dp">

            <Spinner
                android:id="@+id/fonts_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/choose_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/color_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:checkedButton="@+id/yellow"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:button="@drawable/radio_yellow" />

            <RadioButton
                android:id="@+id/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:button="@drawable/radio_orange" />

            <RadioButton
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:button="@drawable/radio_red" />

            <RadioButton
                android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:button="@drawable/radio_blue" />

            <RadioButton
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:button="@drawable/radio_green" />

            <RadioButton
                android:id="@+id/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:button="@drawable/radio_white" />

            <RadioButton
                android:id="@+id/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_4"
                android:button="@drawable/radio_black" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_oval"
        android:padding="6dp"
        android:text="@string/save_text"
        android:textAllCaps="false"
        android:textColor="@color/black_gray"
        android:textSize="18sp" />

</RelativeLayout>